# Clipmate-windows

./: .gitignore  BUILD.md  LICENSE  LICENSE.txt  README.md  build.bat  gen_icon.py  index.html  package-lock.json  package.json  start-app.bat  start-preview.bat  tailwind.config.cjs  vite.config.cjs
.github/workflows/: release.yml
ClipMate-Native/: index.html  package.json
ClipMate-Native/src/: main.js  styles.css
ClipMate-Native/src-tauri/: Cargo.toml  tauri.conf.json
ClipMate-Native/src-tauri/capabilities/: default.json
ClipMate-Native/src-tauri/src/: commands.rs  main.rs  models.rs
docs/: README.en.md  README.ja.md  README.ko.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs
src/main/: main.js  preload.js
src/renderer/: App.jsx
src/renderer/styles/: index.css
